Revision history for Perl module Date::QuarterOfYear

0.05 2021-06-19 NEILB
    - Can now handle YYYY-M-D (single dates for days and months).
      Addresses GF#1 from Tore Aursand.

0.04 2021-06-14 NEILB
    - Added tests for all the error checking on params
    - Switched to github issues for bug tracker

0.03 2015-10-27 NEILB
    - Updated github repo URL after changing my github username
    - Include a META.json in releases, and tag & push to github on release

0.02 2014-05-29 NEILB
    - Added a couple more modules to SEE ALSO, and added more specific
      details of what DateTime provides.

0.01 2014-05-18 NEILB
    - First release to CPAN
