@@ -3,6 +3,7 @@ Revision history for Perl module Date::QuarterOfYear
 0.05 2021-06-19 NEILB
     - Can now handle YYYY-M-D (single dates for days and months).
       Addresses GF#1 from Tore Aursand.
+    - Handle situation where input is the wrong format entirely.
 
 0.04 2021-06-14 NEILB
     - Added tests for all the error checking on params
